fixing spacing

--- a/packages/mgt-components/src/components/mgt-login/mgt-login.scss
+++ b/packages/mgt-components/src/components/mgt-login/mgt-login.scss
@@ -17,9 +17,9 @@ mgt-login {
   --height: '100%';
   --margin: 0;
   --padding: 12px 20px;
-  --popup-command-font-size: #{$ms-font-size-s};
+  --popup-command-font-size: 14px;
   --popup-command-margin: 16px 0 0;
-  --popup-padding: 10px 10px 16px 15px;
+  --popup-padding: 10px 4px 16px 4px;
 }
 
 :host .root,
@@ -81,7 +81,7 @@ mgt-login .login-icon {
 mgt-login .popup {
   font-family: $font-family;
   background-color: $popup__background-color;
-  min-width: 240px;
+  width: 300px;
   max-width: 300px;
   z-index: 1;
   color: set-var(popup__color, $theme-default, $login);
@@ -97,12 +97,11 @@ mgt-login .popup-content {
   flex-direction: column;
   padding: var(--popup-padding);
   background-color: $popup__background-color;
-
   .inside-content {
     overflow-y: auto;
     overflow-x: clip;
     max-height: 400px;
-    padding-right: 10px;
+
     .list-box {
       background-color: $popup__background-color;
       --accent-fill-hover: $popup__background-color;
@@ -110,31 +109,37 @@ mgt-login .popup-content {
       --accent-foreground-cut-rest: black;
       color: black !important;
       .list-box-option {
-        margin-bottom: 10px;
+        margin-bottom: 4px;
         mgt-person {
+          max-width: 270px;
+          margin-left: 18px;
           --details-spacing: 9px;
           --avatar-size: 40px;
           position: relative;
+          --line1-color: rgba(0, 0, 0, 0.83);
+          --line2-color: rgba(0, 0, 0, 0.55);
           &:after {
             content: '';
             position: absolute;
             z-index: 1;
             top: 0;
-            right: 0;
-            bottom: 5px;
+            right: 8px;
+            bottom: 0px;
             pointer-events: none;
-            background-image: linear-gradient(to right, rgba(255, 255, 255, 0), $popup__background-color 85%);
-            width: 40%;
+            background-image: linear-gradient(to right, rgba(255, 255, 255, 0), $popup__background-color 100%);
+            width: 50%;
           }
         }
         &:hover {
-          background-color: #e5e5e5;
+          border-radius: 4px;
+          background: rgba(0, 0, 0, 0.1);
         }
       }
       &:focus {
         .list-box-option {
           &.selected {
-            background-color: #e5e5e5;
+            border-radius: 4px;
+            background: rgba(0, 0, 0, 0.1);
           }
         }
       }
@@ -175,21 +180,12 @@ mgt-login .popup-content {
       border: none;
       background-color: $popup__background-color;
       cursor: pointer;
-      margin: 25px 0px 10px 0px;
+      margin: 25px 0px 10px 19px;
       padding: 0;
       border: 1px solid transparent;
       &:hover {
         color: #{$commblue_shade20};
-        &:after {
-          content: '';
-          position: absolute;
-          right: 0;
-          bottom: 0;
-          width: 98%;
-
-          border-bottom: 1px solid;
-          border-radius: 0;
-        }
+        text-shadow: 0 0 0.01px #{$commblue_shade20};
       }
       .account-switch-icon {
         vertical-align: middle;
@@ -199,12 +195,14 @@ mgt-login .popup-content {
   }
 
   .main-profile {
-    margin-bottom: 30px;
+    margin-bottom: 35px;
     text-align: center;
     mgt-person {
       --avatar-size: 72px;
       --avatar-direction: column;
       --details-spacing: 0px;
+      --line1-color: rgba(0, 0, 0, 0.83);
+      --line2-color: rgba(0, 0, 0, 0.55);
     }
   }
 }
@@ -214,10 +212,10 @@ mgt-login .popup-commands ul {
   list-style-type: none;
   margin: var(--popup-command-margin);
   padding: 0;
-  margin-right: 20px;
   margin-bottom: 10px;
   margin-top: 6px;
   text-align: right;
+  padding-right: 16px;
 }
 
 :host .popup-command,
@@ -233,9 +231,8 @@ mgt-login .popup-command {
   border: 1px solid transparent;
 
   &:hover {
+    text-shadow: 0 0 0.01px #{$commblue_shade20};
     color: #{$commblue_shade20};
-    border-bottom: 1px solid;
-    border-radius: 0;
   }
 }
 
